added assemble.sh cron job

--- a/envmon/index.html
+++ b/envmon/index.html
@@ -19,7 +19,7 @@ FabLab Environment
 </div>
 
 <script>
-if (typeof(data) !== 'object') {
+if (typeof(temp_data) !== 'object') {
 data = {
     labels: [65, 59, 80, 81, 56, 55, 45, 59, 80, 81, 56, 55],
     datasets: [
