--- a/envmon/index.html
+++ b/envmon/index.html
@@ -29,7 +29,7 @@
     }
     hours = [];
     for (var _index = 0; _index < temp_data.length; _index++) {
-      hours[_index] = temp_data.lenth - _index;
+      hours[_index] = temp_data.length - _index;
     }
 
     var data = {
